...

                        Padding(
                          padding: AdaptiveSizes.getMainPadding(),
                          child: SizedBox(
                            width: AdaptiveSizes.getInputFieldWidth(),
                            child: TextFormField(
                              key: Key('login_controller'),
                              controller: _loginController,
                              focusNode: _loginFocus,

                              textInputAction: TextInputAction.next,

                              style: AdaptiveSizes.getInputTextStyle(),
...

                        Padding(
                          padding: AdaptiveSizes.getMainPadding(),
                          child: SizedBox(
                            width: AdaptiveSizes.getInputFieldWidth(),
                            child: TextFormField(
                              key: Key('real_name_controller'),
                              controller: _realNameController,
                              focusNode: _realNameFocus,
                              textInputAction: TextInputAction.next,

                              style: AdaptiveSizes.getInputTextStyle(),

...

                        Padding(
                          padding: AdaptiveSizes.getMainPadding(),
                          child: SizedBox(
                            width: AdaptiveSizes.getInputFieldWidth(),
                            child: TextFormField(
                              key: Key('password_controller'),
                              controller: _passwordController,
                              focusNode: _passwordFocus,

                              textInputAction: TextInputAction.next,

                              style: AdaptiveSizes.getInputTextStyle(),
...

                        Padding(
                          padding: AdaptiveSizes.getMainPadding(),
                          child: SizedBox(
                            width: AdaptiveSizes.getInputFieldWidth(),
                            child: TextFormField(
                              key: Key('password_again_controller'),
                              controller: _passwordAgainController,
                              focusNode: _passwordAgainFocus,

                              textInputAction: TextInputAction.done,

                              style: AdaptiveSizes.getInputTextStyle(),
...
                        SizedBox(height: AdaptiveSizes.screenHeight * 0.045),

                        SizedBox(
                          width: AdaptiveSizes.getButtonWidth2(),
                          height: AdaptiveSizes.getButtonHeight(),
                          child: ElevatedButton(
                            key: Key('register_button'),

                            style: ElevatedButton.styleFrom(
                              backgroundColor: Colors.orangeAccent[200],
                              foregroundColor: Color.fromARGB(221, 22, 20, 20),
                              shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(15),
...
