...
  "realname": "Real name",
  "password_again": "Password again",
  "card_id": "Card ID (Example: PB-123456)",
  "city": "City",
  "to_short_username": "Username too short (minimum 6 char)",
  "username_taken": "This username is already taken.",
  "realname_empty": "Real name empty.",
  "to_short_password": "Password too short (minimum 6 char)",
  "only_number_password": "Password cannot be only numbers.",
  "passwords_do_not_match": "Passwords do not match.",
  "wrong": "Wrong username or password",
  "card_already_used": "Card already used",
  "wrong_card_format": "Wrong card format (Example: PB-123456)",
  "welcome": "Authorization Successful! Welcome dear",
  "no_account": "Don't you have an account?",
...
